Closed Bug 974053 Opened 10 years ago Closed 10 years ago

fix ODR violation with mozilla::dom::workers::TeardownRunnable::Run

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: froydnj, Unassigned)

Details

Attachments

(1 file)

      No description provided.
Let's rename everything so that there are no naming conflicts.
Attachment #8377752 - Flags: review?(khuey)
https://hg.mozilla.org/mozilla-central/rev/56695e0692b5
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: