Bug 974053 - fix ODR violation with mozilla::dom::workers::TeardownRunnable::Run; r=khuey